# learn-control-backend

./: README.md  pyproject.toml  teste.json
app/: main.py
app/schemas/: control_schema.py  pid_values.py  values_scheme.py
app/services/: pid_digital_service.py  pid_service.py
arduino/learn_control/learn_control_v2.ino/: learn_control_v2.ino.ino
serial_read/: read_serial_port.py
test_front/: index.html
